# Looker

./: .env.example  .gitignore  Dockerfile  INTUIT_CUSTOM_SCRAPER_TODO.md  README.md  RIPPLEMATCH_INTEGRATION.md  RIVIAN_CONFIG_EXAMPLE.json  SHOPIFY_FETCHER_README.md  TESLA_DELIVERABLES.md  TESLA_FETCHER_README.md  TESLA_QUICK_START.md  TESLA_USAGE_EXAMPLES.md  TIKTOK_API_STRUCTURE.md  TIKTOK_FETCHER_README.md  TIKTOK_FETCHER_SUMMARY.md  TIKTOK_INTEGRATION_GUIDE.md  TIKTOK_INTEGRATION_PATCH.md  WORKDAY_SELENIUM_README.md  WORKING_COMPANIES.md  config.json  config.py  config_example_tiktok.yaml  discord_notifier.py  filtering.py  main.py  models.py  pyproject.toml  state.py  test_tesla.py  test_tesla_fetcher.py  test_tesla_parsing.py  test_tiktok_fetcher.py  test_workday_selenium.py  verify_workday_selenium.sh
docs/: GOLDMANSACHS_FETCHER.md  ORACLE_FETCHER.md  jpmorgan_fetcher.md
examples/: jpmorgan_config_example.json  oracle_config_example.yaml
fetchers/: amazon.py  amd.py  apple.py  ashby.py  base.py  goldmansachs.py  google.py  greenhouse.py  hnhiring.py  icims.py  intuit.py  jibe.py  jobvite.py  jpmorgan.py  lever.py  linkedin.py  meta.py  microsoft.py  microsoft_old.py  netflix.py  newgrad_json.py  newgrad_markdown.py  oracle.py  proxy_utils.py  qualcomm.py  ripplematch.py  rivian.py  selenium_utils.py  shopify.py  smartrecruiters.py  taleo.py  tesla.py  tesla_browser.py  tiktok.py  wellfound.py  workable.py  workday.py  workday_selenium.py  yc.py  yelp.py
scripts/: fix_config.py  test_ripplematch.py  update_working_companies.py  validate_maang.py  (+1 more)
(+43 files in other folders)
