[tool.poetry]
name = "job-notification-discord"
version = "0.1.0"
description = "Discord job alert system that polls multiple sources and posts matches via webhooks"
authors = ["ncurl"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31"
feedparser = "^6.0"
python-dotenv = "^1.0"
tenacity = "^8.2"
pydantic = "^2.5"
selenium = "^4.15"
webdriver-manager = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-mock = "^3.12"
responses = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
